--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
+    "angular-datatables": "^12.0.0",
+    "bootstrap": "^5.0.1",
+    "datatables.net": "^1.10.20",
+    "datatables.net-bs4": "^1.10.20",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
@@ -26,7 +34,11 @@
     "@angular-devkit/build-angular": "~12.0.3",
     "@angular/cli": "~12.0.3",
     "@angular/compiler-cli": "~12.0.3",
+    "@angular/localize": "^12.0.4",
+    "@types/bootstrap": "^5.0.16",
+    "@types/datatables.net": "^1.10.18",
     "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^3.3.33",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
